2.82. Fullscreen filebrowser don't goes away #71474

Closed
opened 2019-11-10 16:22:43 +01:00 by brothermechanic · 8 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: git master
Worked: 2.80 release

Short description of error

Exact steps for others to reproduce the error
1 Set all temporary windows in image editor and fullscreen modes (see video)
2 Render Image
3 Save Image
4 Try to contine work in 3d by F11 hotkey
2019-11-10 18-15-49.mp4

**System Information** Operating system: Graphics card: **Blender Version** Broken: git master Worked: 2.80 release **Short description of error** **Exact steps for others to reproduce the error** 1 Set all temporary windows in image editor and fullscreen modes (see video) 2 Render Image 3 Save Image 4 Try to contine work in 3d by F11 hotkey [2019-11-10 18-15-49.mp4](https://archive.blender.org/developer/F8019239/2019-11-10_18-15-49.mp4)

Added subscriber: @brothermechanic

Added subscriber: @brothermechanic

Added subscriber: @DeadDrag0

Added subscriber: @DeadDrag0

Blender did remvoe the hotkey for toggle fullscreen and widnwos mode , so this is a bug

Blender did remvoe the hotkey for toggle fullscreen and widnwos mode , so this is a bug
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

This is indeed a little awkward, code returns to previous space [which was the filebrowser].
I guess @JulianEisel could have a look?

This is indeed a little awkward, code returns to previous space [which was the filebrowser]. I guess @JulianEisel could have a look?

This issue was referenced by b962253ed1

This issue was referenced by b962253ed158e41dc30d852421abbfee23154f43
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2019-11-11 12:44:22 +01:00

Thank you

Thank you
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71474
No description provided.