Fix T71474: Temporary image editor cancels to file editor after file operation